added option for umi extract and dedup

--- a/config/config.yml
+++ b/config/config.yml
@@ -16,7 +16,12 @@ get_genome:
 processing:
   fastp:
     extra: ""
-
+  umi_tools:
+      enabled: false  # Set to true to enable UMI extraction
+      extract_extra: "--bc-pattern=NNNNNNNN"
+      dedup_enabled: false  # Set to true to enable deduplication
+      dedup_extra: "--method=unique"  # or directional, cluster, adjacency, etc.
+      
 mapping:
   tool: "bwa_mem2"
   bowtie2:
