--- a/config/config.yml
+++ b/config/config.yml
@@ -14,8 +14,11 @@ get_genome:
     ]
 
 processing:
+  tool: "fastp"
   fastp:
     extra: ""
+  trim_galore:
+    extra: "--gzip --paired"
 
 mapping:
   tool: "bwa_mem2"
