--- a/.test/config/config.yml
+++ b/.test/config/config.yml
@@ -57,7 +57,7 @@ mapping_stats:
     extra: ""
   deeptools_coverage:
     genome_size: 1000
-    extra: "--binsize 1 --normalizeUsing CPM"
+    extra: "--binSize 1 --normalizeUsing CPM"
 
 variant_calling:
   tool: "freebayes"
