simplify peak calling syntax

--- a/config/config.yml
+++ b/config/config.yml
@@ -96,7 +96,7 @@ qc:
 report:
   minimum_variant_count: 2
 
-chip_peak_calling:
-  tool: "macs2"
+peak_calling:
+  tool: "none"
   macs2:
     extra: "-f BAM -g hs --nomodel"
