fix: fix config parameter name chip_peak_calling --> peak_calling

--- a/.test/config/config.yml
+++ b/.test/config/config.yml
@@ -95,7 +95,7 @@ qc:
 report:
   minimum_variant_count: 2
 
-chip_peak_calling:
+peak_calling:
   tool: "macs2"
   macs2:
     extra: "-f BAM --nomodel"
