--- a/config/config.yml
+++ b/config/config.yml
@@ -16,21 +16,15 @@ get_genome:
 processing:
   tool: "fastp"
   fastp:
-    extra: "--detect_adapter_for_pe"
+    extra: ""
   trim_galore:
     extra: "--gzip --paired"
-  umi_tools:
-      enabled: true  # Set to true to enable UMI extraction
-      extract_extra: "--bc-pattern=NNNNNNNN --bc-pattern2=NNNNNNNN" 
-      dedup_enabled: true  # Set to true to enable deduplication
-      dedup_extra: "--paired"  # or directional, cluster, adjacency, etc.
-
 
 mapping:
-  tool: "bowtie2"
+  tool: "bwa_mem2"
   bowtie2:
     index: ""
-    extra: "--threads 10 --sensitive --end-to-end --maxins 500"
+    extra: ""
   bwa_mem2:
     extra: ""
     sort: "samtools"
@@ -57,9 +51,7 @@ mapping_stats:
   rseqc_bam_stat:
     extra: ""
   deeptools_coverage:
-    genome_size: 2913255426
-    fiveprime: false
-    strand_specific: false
+    genome_size: 1000
     extra: ""
 
 variant_calling:
@@ -96,8 +88,3 @@ qc:
 
 report:
   minimum_variant_count: 2
-
-peak_calling:
-  tool: "none"
-  macs2:
-    extra: "-f BAM -g hs --nomodel"
